# nsx-peripherals

./: CHANGELOG.md  CMakeLists.txt  README.md  nsx-module.yaml  release-please-config.json
.github/workflows/: release.yml
includes-api/: ns_peripherals_button.h
src/: ns_button.c
src/apollo3/: ns_button.c
src/apollo330/: ns_button.c
src/apollo4/: ns_button.c
src/apollo5/: ns_button.c
tests/: ns_power_tests.c
